--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Beihao Xia & Conghao Wong
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  TEAM: "aboutme"
   # Resources:
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
   #   - Learn markdown: "https://www.markdowntutorial.com/"
