Update 'Environment Configuration Guidelines'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,6 @@
         "**/README.md",
         "**/*.txt",
         "**/*.md"
-    ]
+    ],
+    "editor.unicodeHighlight.nonBasicASCII": true
 }
