--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Project Unpredictable
 
 # Your name to show in the footer
-author: Beihao Xia & Conghao Wong
+author: Copyright ©️ Beihao Xia & Conghao Wong
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -21,10 +21,14 @@ author: Beihao Xia & Conghao Wong
 
 navbar-links:
   TEAM: "aboutme"
+  PUBLICATIONS: "publications"
   # Resources:
   #   - Beautiful Jekyll: "https://beautifuljekyll.com"
   #   - Learn markdown: "https://www.markdowntutorial.com/"
   # Author's home: "https://deanattali.com"
+  GitHub:
+    - Beihao Xia: "https://github.com/northocean"
+    - Conghao Wong: "https://github.com/cocoon2wong"
 
 ################
 # --- Logo --- #
@@ -49,10 +53,11 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
+  email: "xbh_hust@hust.edu.cn"
   email: "conghaowong@icloud.com"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
   # facebook: deanattali
-  github: cocoon2wong
+  # github: cocoon2wong
   # twitter: daattali
   # patreon: DeanAttali
   # youtube: c/daattali
@@ -109,7 +114,7 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+edit_page_button: false
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
