--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,10 @@ author: Copyright ©️ Beihao Xia & Conghao Wong
 ###############################################
 
 navbar-links:
-  TEAM: "aboutme"
-  PUBLICATIONS: "publications"
-  # Resources:
-  #   - Beautiful Jekyll: "https://beautifuljekyll.com"
-  #   - Learn markdown: "https://www.markdowntutorial.com/"
-  # Author's home: "https://deanattali.com"
+  HOME: "/index"
+  TEAM: "/team/index"
+  PUBLICATIONS: "publications/index"
+  POSTS: "/posts/index"
   GitHub:
     - Beihao Xia: "https://github.com/northocean"
     - Conghao Wong: "https://github.com/cocoon2wong"
@@ -53,7 +51,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "conghaowong@icloud.com"
+  # email: "conghaowong@icloud.com"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
   # facebook: deanattali
   # github: cocoon2wong
