--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,12 @@ footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
 
+# Button colors
+button-hover-color: "#0085A1"
+button-hover-text-color: "#FFFFFF"
+button-active-color: "#003551"
+button-active-text-color: "#FFFFFF"
+
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
