--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
   HOME: "/index"
   TEAM: "/team/index"
   PUBLICATIONS: "publications/index"
-  POSTS: "/posts/index"
+  NEWS: "/posts/index"
   GitHub:
     - Beihao Xia: "https://github.com/northocean"
     - Conghao Wong: "https://github.com/cocoon2wong"
