--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Project Unpredictable
 
 # Your name to show in the footer
-author: Copyright ©️ Beihao Xia & Conghao Wong
+author: Copyright ©️ Team Unpredictable
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -27,6 +27,7 @@ navbar-links:
   GitHub:
     - Beihao Xia: "https://github.com/northocean"
     - Conghao Wong: "https://github.com/cocoon2wong"
+    - Ziqian Zou: "https://github.com/LivepoolQ"
 
 ################
 # --- Logo --- #
