--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ navbar-links:
   HOME: "/index"
   TEAM: "/team/index"
   PUBLICATIONS: "/publications/index"
+  OPEN SOURCES: "/repos/index"
   NEWS: "/posts/index"
   # GitHub:
   #   - Beihao Xia: "https://github.com/northocean"
@@ -297,6 +298,8 @@ exclude:
   - screenshot.png
   - docs/
   - Project-Zero/
+  - Project-Zero-Divided/
+  - scripts/
 
 plugins:
   - jekyll-paginate
